# genshin-gallery-api

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile.buildbase  README.md
docs/: openapi.yaml
kubernetes/: deploy.yaml
src/: api.rs  artwork.rs  db.rs  lib.rs  main.rs
