[package]
name = "genshin-gallery-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "genshin-gallery-api"

[lib]
name = "genshin_gallery_api"

# Shrink dev size
# https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html
[profile.dev.package."*"]
opt-level = "z"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.actix-web]
version = "^4.0.0-rc.2"

[dependencies.serde]
version = "^1"

[dependencies.serde_json]
version = "^1"

[dependencies.serde_qs]
version = "^0.8.5"

[dependencies.serde_with]
version = "^1.11.0"
features = ["json"]

[dependencies.typed-builder]
version = "^0.9.0"

[dependencies.mongodb]
version = "^2.1.0"

[dependencies.tokio]
version = "^1.16.1"
features = ["full"]

[dependencies.tokio-stream]
version = "^0.1"

[dependencies.futures]
version = "^0.3.21"
